clusters/kube-lab/fireflyiii/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-ingress
  namespace: firefly
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`firefly.lab.markaplay.net`)
      kind: Rule
      services:
      - name: firefly-firefly-iii
        port: 80
    - match: Host(`firefly-importer.lab.markaplay.net`)
      kind: Rule
      services:
      - name: firefly-importer
        port: 80
  tls:
    secretName: firefly-cert
